# tauri-app-2_0_6

./: package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
