[package]
name = "tauri-app-2_0_6"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_2_0_6_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-utils = { version = "=2.0.2", features = [] }
tauri-runtime = { version = "=2.1.1", features = [] }
tauri-runtime-wry = { version = "=2.1.2", features = [] }
tauri-macros = { version = "=2.0.2", features = [] }
tauri-build = { version = "=2.0.2", features = [] }
tao = "=0.30.2"

[dependencies]
tauri = { version = "=2.0.6", features = [] }
tauri-plugin-shell = "=2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

